--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Sales Dashboard</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Hello I am here, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
